base/argocd/base/http_redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  parentRefs:
  - name: shared-gateway
    namespace: shared-gateway
    sectionName: http
  hostnames:
  - "cd.nhlabs.org"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
